[optimize]filesystemV4增加对swaggertype的支持
