# web-site/backend/aid-web-backend/docs/swagger.json
@@ -129,7 +129,19 @@
                     "200": {
                         "description": "获取成功",
                         "schema": {
-                            "$ref": "#/definitions/httpModule.HTTPResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/httpModule.HTTPResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "content": {
+                                            "$ref": "#/definitions/response.FileListResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "403": {
@@ -336,6 +348,20 @@
                 },
                 "path": {
                     "type": "string"
+                }
+            }
+        },
+        "response.FileListResponse": {
+            "type": "object",
+            "properties": {
+                "currentPath": {
+                    "type": "string"
+                },
+                "filesystemers": {
+                    "type": "array",
+                    "items": {
+                        "type": "object"
+                    }
                 }
             }
         },
