# web-site/backend/aid-web-backend/src/module/httpModule/v1HTTPModule/response/file_manager.res.go
@@ -12,7 +12,7 @@ type (
 	}
 
 	FileListResponse struct {
-		Filesystemers []filesystemV4.Filesystemer `json:"filesystemers" swaggertype:"object"`
+		Filesystemers []filesystemV4.Filesystemer `json:"filesystemers" swaggertype:"array,object"`
 		CurrentPath   string                      `json:"currentPath" swaggertype:"string"`
 	}
 )
